force-brf/main/objects/brf_BatchApexErrorLog__c/brf_BatchApexErrorLog__c.object-meta.xml
<CustomObject>
    <label>Batch Apex Error Log</label>
    <nameField>
        <displayFormat>JOB-{00000000}</displayFormat>
        <label>Batch Apex Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Apex Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>