force-brf/main/objects/brf_BatchApexErrorLog__c/fields/JobCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>JobCreatedDate__c</fullName>
    <label>Job Created Date</label>
    <type>DateTime</type>
</CustomField>