force-brf/main/objects/brf_BatchApexErrorLog__c/fields/JobErrors__c.field-meta.xml
<CustomField>
    <fullName>JobErrors__c</fullName>
    <label>Job Errors</label>
    <summaryForeignKey>brf_BatchApexError__c.BatchApexErrorLog__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>