force-brf/main/objects/brf_BatchApexErrorLog__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <externalId>true</externalId>
    <label>Job Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>