force-brf/main/objects/brf_BatchApexErrorLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>JobApexClass__c</columns>
    <columns>JobCreatedDate__c</columns>
    <columns>JobErrors__c</columns>
    <columns>JobId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>